--- a/cleanback/sass/style.sass
+++ b/cleanback/sass/style.sass
@@ -481,9 +481,12 @@ body
     &__content
         flex: 0 0 100%
     &__text
-        font-size: 16px
-        font-family: 'Geometria'
-        line-height: 20px
+        p + p
+            margin-top: 20px
+        p
+            font-size: 16px
+            font-family: 'Geometria'
+            line-height: 20px
 
 .footer
     background-color: #424250
