--- a/business/sass/media.sass
+++ b/business/sass/media.sass
@@ -23,6 +23,7 @@ $main_grey: #E8E8E8
                 height: auto 
                 width: auto
         &__team
+            overflow: visible
             .swiper-wrapper 
                 display: flex
                 flex-wrap: wrap
