--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -581,6 +581,7 @@ body
         flex-direction: column
         align-items: center
         span
+            margin-top: 4px
             text-align: center
     &__name
         text-transform: uppercase
