--- a/test/sass/style.sass
+++ b/test/sass/style.sass
@@ -184,6 +184,7 @@ body
     &__tabs
         display: flex
         justify-content: space-between
+        background-image: linear-gradient(45deg, #009D8C, #00508C)
     &__tab
         padding: 10px 10px 10px 4px
         border-radius: 10px 10px 0px 0px
