--- a/test/sass/style.sass
+++ b/test/sass/style.sass
@@ -194,6 +194,7 @@ body
             font-size: 15px
         &.active
             background: linear-gradient(0deg, #BAC1D0, #E8EAEF)
+            color: #7084A4
             .aside__close
                 display: inline-block
         &.unread
