contacts page done

--- a/business/sass/media.sass
+++ b/business/sass/media.sass
@@ -92,6 +92,15 @@ $main_grey: #E8E8E8
         &>*
             padding-left: 40px
             padding-right: 40px
+        &__contacts-data
+            padding: 0
+        &__contact_bold
+            
+        &__email
+            margin-right: 15px
+        &__contact-img
+            img
+                transform: none
         &__picture
             padding: 0px
         &__text
@@ -222,6 +231,8 @@ $main_grey: #E8E8E8
             font-size: 16px
         
 @media screen and ( max-width:  860px)
+    .purchise-header.nomap
+        margin: 0
     .main
         &__header
             font-size: 18px
