--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -636,7 +636,7 @@ body
         text-decoration: none
         color: #000
         position: relative
-        display: inline-block
+        display: block
         &::after
            content: ''
            display: block
@@ -687,6 +687,8 @@ body
     &__data-wrap
         min-width: 135px
         margin-right: 15px
+    &__contact_bold + &__contact_bold
+        margin-top: 5px
     &__contact_bold
         font-size: 16px
         font-weight: 800
