--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -703,7 +703,115 @@ body
             transform: translateY(-50px)
     &__contact-map
         margin-bottom: 30px
+    &__list-title
+        font-size: 21px
+        font-weight: 800
+        margin-bottom: 30px
+    &__content
+        p
+            font-size: 18px
+            line-height: 20px
+    &__access
+        padding: 40px 70px 20px
+        margin: 50px 0px
+        background-color: #358DE0
+        display: flex
+        flex-direction: column
+        align-items: center
+        p
+            text-transform: uppercase
+            text-align: center
+            color: #fff
+            font-size: 16px
+            font-weight: 700
+            line-height: 24px
+.red-text
+    color: #BF010B
+.bold
+    font-weight: 600
+.mt
+    margin-top: 30px
+.red__button
+    background-color: #CF020C !important
+    font-size: 14px !important
+    font-weight: 500 !important
+    color: #fff !important
+    text-align: center
+    &:hover
+        background-color: #b10009 !important
 
+.tenders
+    margin-top: 40px
+    &__wrapper
+        display: flex
+        justify-content: space-between
+    &__wrap
+        flex-basis: 40%
+    &__item + &__item
+        margin-top: 10px
+    &__item
+        font-size: 16px
+        font-weight: 700
+        line-height: 20px
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+        span
+            text-transform: uppercase
+            display: block
+    &__section + &__section
+        margin-top: 10px
+    &__link
+        text-decoration: none
+        color: #358DE0
+        position: relative
+        display: inline-block
+        font-size: 16px
+        font-weight: 500
+        &::after
+           content: ''
+           display: block
+           position: absolute
+           bottom: -2px
+           left: 0
+           width: 100%
+           transform: scaleX(0)
+           transform-origin: left
+           height: 1px
+           background-color: #358DE0
+           transition: all ease-in .2s 0s
+        &:hover
+            &::after
+                transform: scaleX(1)
+    &__section-header
+        position: relative
+        padding-top: 5px
+        margin-bottom: 10px
+        h4
+            font-size: 14px
+            font-weight: 800
+            text-transform: uppercase
+        h3
+            font-size: 18px
+            font-weight: 800
+            text-transform: uppercase
+        &::before
+            content: ''
+            display: block
+            position: absolute
+            width: 100%
+            height: 1px
+            background-color: #000
+            top: 0
+            left: 0
+    &__title
+        background-color: #3286D7
+        padding: 16px 45px
+        margin-bottom: 20px
+        h2
+            color: #ffffff
+            text-transform: uppercase
+            font-size: 17px
 
 .swiper-pagination, .swiper-pagination1, .swiper-pagination2
     text-align: center
