--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -311,7 +311,7 @@ body
         height: 100vh
         width: 200px
         z-index: 4
-        padding-top: 80px
+        padding-top: 60px
         top: 0
         left: 0
         background-color: #732F82
@@ -862,6 +862,7 @@ body
             padding-bottom: 30px
             text-align: center
             background-image: url('../img/card-bg.png')
+            background-position: -5px 2px
             background-repeat: no-repeat
             background-size: cover
             span + span
@@ -2519,6 +2520,31 @@ body
         max-width: 960px
         left: 50%
         transform: translateX(-50%)
+        &-img
+            position: absolute
+        &-img1
+            left: 0
+            top: 50px
+            transform: translateX(-80%)
+        &-img2
+            left: 960px
+            top: 50px
+            z-index: 3
+        &-img3
+            top: 420px
+            left: 70px
+            z-index: 3
+        &-img4
+            left: 1100px
+            top: 150px
+            transform: rotate(40deg)
+        &-img5
+            top: 400px
+            left: -20px
+        &-img6
+            left: 1100px
+            top: 450px
+            transform: rotate(60deg)
     &__review
         max-width: 900px
         background-color: #fff
@@ -2548,6 +2574,7 @@ body
     &__grid
         display: grid
         grid-template-columns: repeat(2, 1fr)
+        position: relative
         grid-column-gap: 2em
         grid-row-gap: 1em
         margin-top: 55px
@@ -2570,8 +2597,41 @@ body
         border-radius: 15px
         box-shadow: 0 3px 0 0 $yellow
         max-width: 555px
+        position: relative
+        &-baloons, &-d3
+            position: absolute
+            z-index: 0
+        &-baloons
+            left: 0
+            top: 80px
+        &-d3
+            top: 50px
+            right: 60px
+        &-item
+            position: absolute
+        &-item1
+            right: 20px
+            top: -20px
+        &-item11
+            z-index: -1
+            right: 0
+            top: 0
+            transform: translate(20%, -20%)
+        &-item21
+            z-index: -1
+            left: 0
+            bottom: 0
+            transform: translate(-30%, 30%)
+        &-item2
+            left: -20px
+            bottom: 20px
+        &-item3
+            right: 20px
+            bottom: -20px
         &-head
             display: flex
+            z-index: 2
+            position: relative
             align-items: center
         &-img
             img
@@ -2590,6 +2650,8 @@ body
             p
                 font-size: 18px
         &-body
+            z-index: 2
+            position: relative
             p
                 font-size: 18px
                 margin-top: 35px
