--- a/animators/sass/media.sass
+++ b/animators/sass/media.sass
@@ -684,14 +684,17 @@ $grey-brown: #674F4D
                 position: relative
                 width: 270px
                 top: 50%
-                transform: translateY(-50%)
+                transform: translateY(-51%)
                 height: 270px
             &-circle
                 width: 270px
                 height: 260px
+                img
+                    top: 60%
                 &-outer
                     width: 270px
                     height: 260px
+                    box-shadow: 0 0 0px 10px #7F1FA09e, 0 0 0px 20px #6D14959e
         &__actions
             padding: 30px 0px 20px
         &__action
