--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -773,6 +773,8 @@ body
         display: flex
         flex-direction: column
         align-items: center
+        margin-left: 5px
+        margin-right: 5px
         position: relative
         max-width: 380px
         margin-top: 20px
@@ -808,15 +810,18 @@ body
             margin: 45px
         &-mask
             width: 300px
-            height: 300px
+            height: 320px
             border-radius: 0 0 50% 50%
             overflow: hidden
+            position: absolute
+            bottom: 0
         &-circle
             width: 300px
             height: 300px
             background-color: white
             border-radius: 50%
-            position: relative
+            position: absolute
+            bottom: 0
             img
                 position: absolute
                 top: 50%
@@ -826,6 +831,7 @@ body
                 width: 300px
                 height: 300px
                 background-color: white
+                position: relative
                 border-radius: 50%
                 box-shadow: 0 0 0px 20px #7F1FA09e, 0 0 0px 40px #6D14959e
     .cards__anyway
@@ -862,7 +868,8 @@ body
             padding-bottom: 30px
             text-align: center
             background-image: url('../img/card-bg.png')
-            background-position: -1px 2px
+            background-color: #7F1FA0
+            background-position: -1px 0px
             background-repeat: no-repeat
             background-size: cover
             span + span
