--- a/animators/sass/media.sass
+++ b/animators/sass/media.sass
@@ -529,6 +529,15 @@ $grey-brown: #674F4D
         &__thx, &__violet, &__yellow
             padding: 80px 10px
             padding: 60px 10px
+        &__garland, &__confeti, &__hat,// &__garland, &__garland, 
+            display: none
+        &__yellow
+            .popup__baloons
+                left: 10px
+                top: 190px
+        &__crown
+            width: 90px
+            object-fit: contain
         &__regrats
             margin: 20px 0px
     
