--- a/animators/sass/style.sass
+++ b/animators/sass/style.sass
@@ -35,19 +35,20 @@ body
     z-index: 2
 
 .button
+    background-repeat: no-repeat
+    background-position: center
+    text-transform: uppercase
+    background-size: contain
     text-decoration: none
     display: inline-block
-    position: relative
     text-align: center
-    text-transform: uppercase
+    position: relative
     appearance: none
-    background-size: cover
-    background-position: center
-    background-repeat: no-repeat
     img
         vertical-align: middle
     &:hover
         cursor: pointer
+        background-position: 0px 17px, 0px -30px, 0 0
 
 .small-btn
     border-radius: 30px
@@ -63,23 +64,18 @@ body
     font-weight: 700
 
 .yellow-btn
-    background-image: url(../img/yellow-btn-bg-min.png)
-    box-shadow: 0 2px 0 #EA962D, 0 0 7px rgba(0, 0, 0, .3), inset 0 0 2px 0 #EA962D
-    background-color: #EA962D
+    background: rgb(255,224,0)
+    background: url('../img/yellow-btn-bg.png'), url('../img/yellow-btn-bg.png'), linear-gradient(180deg, rgba(255,224,0,1) 0%, rgba(255,191,0,1) 100%)
     color: $brown
     text-shadow: 3px 0 0 $light-yellow
     border: 1px solid $light-yellow
-    &:hover
-        
 
 .violet-btn
-    background-image: url(../img/violet-btn-bg-min.png)
-    box-shadow: inset 0 0 2px 0 $violet
+    background: rgb(216,100,232)
+    background: url('../img/violet-btn-bg.png'), url('../img/violet-btn-bg.png'), linear-gradient(180deg, rgba(216,100,232,1) 0%, rgba(132,56,181,1) 100%)
     color: #fff
     text-shadow: 0 3px 0 $violet
     border: 1px solid $violet
-    &:hover
-        
 
 .transp-btn
     background-color: transparent
@@ -450,6 +446,10 @@ body
             position: absolute
             left: 20px
             top: -5px
+        &:hover
+            img
+                animation: vibro .5s ease-in-out
+            transform: scale(1.03)
 
 .banner
     margin: 125px
@@ -484,11 +484,6 @@ body
 
 .nomt
     margin-top: 0 !important
-
-.head__wrap
-    &.fixed
-        padding-top: 70px
-    position: relative
 
 .big 
     &-slider
@@ -592,7 +587,7 @@ body
         overflow: hidden
         margin-top: 30px
         position: relative
-        padding: 0px 20px
+        padding: 20px 20px 0px
         .swiper-slide
             height: 100%
         &-prev, &-next
@@ -616,7 +611,7 @@ body
             p
                 margin-left: 0
         &-counter
-            margin-bottom: 15px
+            margin-bottom: 25px
         &-count + &-count
             margin-left: 5px
         &-count
@@ -657,8 +652,9 @@ body
                 margin-left: 10px
         &-sub
             text-align: center
+            margin-top: 10px
         &-form
-            margin-top: 15px
+            margin-top: 25px
             display: flex
             flex-direction: column
             align-items: center
@@ -744,7 +740,6 @@ body
         align-items: center
         &-wrap
             border-radius: 50%
-            background-color: $acid-yellow
             position: relative
             margin-right: 20px
         &-photo
@@ -788,6 +783,9 @@ body
             &:hover
                 &::after
                     transform: scaleX(0.5)
+        &:hover
+            .section__benefit-circle-outer
+                box-shadow: 0 0 0px 0px #FFDB1E9e, 0 0 0px 0px #FFD22Bff
     &_purple
         background-image: url('../img/purple-bg-min.png')
         background-size: cover
@@ -801,11 +799,12 @@ body
         max-width: 380px
         margin-top: 20px
         &-stars
-            position: absolute
-            top: 40%
-            left: 50%
-            transform: translate(-53%, -50%)
-            z-index: 4
+            &-s, &-b
+                position: absolute
+                top: 40%
+                left: 50%
+                transform: translate(-53%, -50%)
+                z-index: 4
         .button
             margin-top: 15px
         &-name
@@ -856,6 +855,12 @@ body
                 position: relative
                 border-radius: 50%
                 box-shadow: 0 0 0px 20px #7F1FA09e, 0 0 0px 40px #6D14959e
+        &:hover
+            .section__personage-stars
+                &-s
+                    transform: translate(-53%, -50%) rotate(3deg) scale(1.02)
+                &-b
+                    transform: translate(-53%, -50%) rotate(-3deg) scale(1.01)
     .cards__anyway
         margin-top: 60px
         display: grid
@@ -914,6 +919,10 @@ body
                     width: 5px
                     border-radius: 50%
                     background-color: $yellow
+        &:hover
+            img
+                transform: translateX(-2%)
+                width: 105%
         &-price
             text-transform: uppercase
             font-weight: 700
@@ -1150,13 +1159,17 @@ body
                 top: 52%
                 transform: translate(-50%, -50%)
         &-link
-            margin-top: 20px
             font-size: 27px
             font-weight: 700
             text-transform: uppercase
-            display: inline-block
+            display: flex
+            align-items: center
+            flex-direction: column
             text-decoration: none
             color: #fff
+        &-name
+            text-align: center
+            margin-top: 20px
             position: relative
             &::after
                 content: ''
@@ -1168,15 +1181,15 @@ body
                 width: 100%
                 background-color: $yellow-bg
                 transform-origin: left
-            &:hover
-               &::after
-                   transform: scaleX(0.5)
         &-price
             margin-top: 20px
             text-align: center
             font-size: 28px
             font-weight: 700
             color: $yellow-bg
+        &:hover
+            .section__gift-circle
+                background-color: $yellow
     .show-slider
         overflow: hidden
         padding: 0px 20px 40px 20px
@@ -1291,6 +1304,10 @@ body
 
 .actions
     padding-bottom: 70px
+    .swiper-wrapper
+        padding-bottom: 5px
+    .personages__offer
+        margin-top: 0
     &__bg
         position: absolute
         left: 50%
@@ -1395,6 +1412,9 @@ body
             width: 100%
             position: relative
             object-fit: cover
+        &:hover
+            img
+                transform: scale(1.05)
     .mb
         margin-bottom: 60px
         position: relative
@@ -1828,7 +1848,7 @@ body
         z-index: 0
     &__offer
         margin-top: 20px
-        padding: 30px 55px
+        padding: 0px 40px 30px
         border-radius: 10px
         max-width: 555px
         background-color: #FFCC36
@@ -1840,10 +1860,10 @@ body
             font-size: 41px
             text-transform: uppercase
             font-weight: 700
+            position: relative
+            transform: translateY(-20px)
             img
-                vertical-align: middle
-                position: relative
-                transform: translateY(-30%)
+                vertical-align: bottom
         &-discount
             display: flex
             align-items: center
@@ -1876,6 +1896,12 @@ body
                 box-sizing: border-box
                 width: 100%
                 padding: 10px 20px
+                border: 1px solid #E0B95E
+                font-size: 18px
+                &:focus
+                    outline: none
+                    border: 1px solid #faedb1
+                    box-shadow: 0 0 2px 1px #faedb1
             p
                 font-size: 14px
             input[type="text"], input[type="tel"]
